style(FilesViewer.styles.css):Remove border to input

--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -6,6 +6,7 @@
   margin-right: 10px;
   height: 300px;
   box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .files-viewer__content:last-child {
@@ -16,10 +17,12 @@
   padding: 10px;
   resize: none;
   width: 50%;
+  border: none;
 }
 
 .files-viewer__preview--wrapper {
   width: 50%;
+  background-color: var(--white-color);
 }
 
 .files-viewer__preview {
