--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -4,20 +4,25 @@
 
 .files-viewer__content {
   margin-right: 10px;
-  height: 300px;
+  min-height: 300px;
   box-sizing: border-box;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 .files-viewer__content:last-child {
   margin-right: 0;
 }
 
+.files-viewer__text-input--wrapper {
+  width: 50%;
+}
 .files-viewer__text-input {
+  border: none;
   padding: 10px;
   resize: none;
-  width: 50%;
-  border: none;
+  width: 100%;
+  height: 100%;
 }
 
 .files-viewer__preview--wrapper {
