refactor(index.css):Add default style for buttons

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,9 @@ body {
 input:active,
 input:focus,
 textarea:active,
-textarea:focus {
+textarea:focus,
+button:active,
+button:focus {
   outline: none;
 }
 
