--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -6,7 +6,6 @@
   margin-right: 10px;
   min-height: 300px;
   box-sizing: border-box;
-  border-radius: 5px;
   overflow: hidden;
 }
 
@@ -22,7 +21,9 @@
   padding: 10px;
   resize: none;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 45px);
+  box-sizing: border-box;
+  border-radius: 5px;
 }
 
 .files-viewer__preview--wrapper {
@@ -35,4 +36,5 @@
   height: inherit;
   margin: auto;
   display: block;
+  border-radius: 5px;
 }
