--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -17,18 +17,20 @@
   width: 50%;
 }
 .files-viewer__text-input {
-  border: none;
   padding: 10px;
   resize: none;
   width: 100%;
-  height: calc(100% - 45px);
+  height: calc(100% - 51px);
   box-sizing: border-box;
   border-radius: 5px;
+  border: 3px solid var(--violet-opacity-color);
 }
 
 .files-viewer__preview--wrapper {
   width: 50%;
   background-color: var(--white-color);
+  border: 3px solid var(--violet-opacity-color);
+  border-radius: 5px;
 }
 
 .files-viewer__preview {
@@ -36,5 +38,4 @@
   height: inherit;
   margin: auto;
   display: block;
-  border-radius: 5px;
 }
