[JPT-5] Store files uploaded in drop-down (#6)
* refactor(FilesViewer.styles.css):Add styles for textarea input

* refactor(FilesViewer.component.js):Implement text area wrapper styles

* refactor(SelectInput.component.js):Create component

* feat(Chevron.icon.js):Create assets folder

* refactor(FilesViewer.component.js):Implement select input

* refactor(index.css):Add default style for buttons

* refactor(FilesViewer.styles.css):Properly show text area

* refactor(SelectInput.component.js):Show and hide options depending on button

* style(Chevron.icon.js):Set up default color

* refactor(index.css):Add colors

* feat(SelectInput.styles.css):Create styles

* refactor(SelectInput.component.js):Implement styles for open state

* style(FilesViewer.styles.css):Add borders

* refactor(src):Update files uploaded

* refactor(SelectInput.component.js):Expect for default value

* refactor(FilesViewer.component.js):Set default value to select input

--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -4,25 +4,33 @@
 
 .files-viewer__content {
   margin-right: 10px;
-  height: 300px;
+  min-height: 300px;
   box-sizing: border-box;
-  border-radius: 5px;
+  overflow: hidden;
 }
 
 .files-viewer__content:last-child {
   margin-right: 0;
 }
 
+.files-viewer__text-input--wrapper {
+  width: 50%;
+}
 .files-viewer__text-input {
   padding: 10px;
   resize: none;
-  width: 50%;
-  border: none;
+  width: 100%;
+  height: calc(100% - 51px);
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 3px solid var(--violet-opacity-color);
 }
 
 .files-viewer__preview--wrapper {
   width: 50%;
   background-color: var(--white-color);
+  border: 3px solid var(--violet-opacity-color);
+  border-radius: 5px;
 }
 
 .files-viewer__preview {
