--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -23,14 +23,22 @@
   height: calc(100% - 51px);
   box-sizing: border-box;
   border-radius: 5px;
-  border: 3px solid var(--violet-opacity-color);
+  border: 3px solid var(--blue-light-color);
 }
 
 .files-viewer__preview--wrapper {
   width: 50%;
   background-color: var(--white-color);
-  border: 3px solid var(--violet-opacity-color);
+  border: 3px solid var(--blue-light-color);
   border-radius: 5px;
+}
+
+.files-viewer__title {
+  padding: 6px 0 6px 10px;
+  background-color: var(--pink-color);
+  color: var(--white-color);
+  font-weight: 600;
+  border-bottom: 3px solid #d6d4fa;
 }
 
 .files-viewer__preview {
