--- a/src/components/SelectInput/SelectInput.styles.css
+++ b/src/components/SelectInput/SelectInput.styles.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
-  border: 3px solid var(--violet-opacity-color);
+  border: 3px solid var(--blue-light-color);
   margin-bottom: 10px;
   padding: 5px 10px;
   cursor: pointer;
@@ -32,7 +32,7 @@
   background-color: var(--white-color);
   width: 100%;
   transform: translateY(-10px);
-  border: 3px solid var(--violet-opacity-color);
+  border: 3px solid var(--blue-light-color);
   border-top-width: 1px;
   border-radius: 0 0 5px 5px;
   box-sizing: border-box;
@@ -43,6 +43,7 @@
   padding: 3px 0 3px 10px;
   cursor: pointer;
   transition: 0.2s background-color ease-in-out;
+  color: var(--black-color);
 }
 
 .select__option:hover {
