--- a/src/components/Progressbar/Progressbar.styles.css
+++ b/src/components/Progressbar/Progressbar.styles.css
@@ -1,4 +1,4 @@
-.progressbar--wrapper {
+.progress--wrapper {
   width: max-content;
   margin: 0 auto;
   position: relative;
@@ -14,7 +14,7 @@
   box-sizing: border-box;
 }
 
-.progressbar {
+.progress {
   position: absolute;
   width: 100%;
   text-align: center;
@@ -22,7 +22,7 @@
   z-index: 2;
 }
 
-.progressbar__filler {
+.progress__filler {
   position: absolute;
   bottom: 9px;
   background: green;
