--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --violet-light-color: #ebeafc;
   --blue-light-color: #d6d4fa;
   --violet-color: #afaaf7;
+  --violet-strong-color: #ab86dd;
   --yellow-color: #f4e095;
   --black-color: #444;
   --white-color: #fff;
