--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body {
   margin: 0;
   box-sizing: border-box;
   height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   background-color: var(--violet-color);
   overflow-y: scroll;
   font-family: "Nunito", sans-serif;
