--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -24,6 +24,7 @@
   box-sizing: border-box;
   border-radius: 5px;
   border: 3px solid var(--blue-light-color);
+  font-family: "Nunito", sans-serif;
 }
 
 .files-viewer__preview--wrapper {
