--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,15 @@
   --yellow-color: #f4e095;
   --black-color: #444;
   --white-color: #fff;
+  --green-color: #a5d6ce;
 }
 
 body {
   margin: 0;
   box-sizing: border-box;
   height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   background-color: var(--violet-color);
   overflow-y: scroll;
   font-family: "Nunito", sans-serif;
