--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -25,6 +25,7 @@
   border-radius: 5px;
   border: 3px solid var(--blue-light-color);
   font-family: "Nunito", sans-serif;
+  background-color: var(--white-color);
 }
 
 .files-viewer__text-input__options {
