--- a/src/components/FilesViewer/FilesViewer.styles.css
+++ b/src/components/FilesViewer/FilesViewer.styles.css
@@ -6,7 +6,6 @@
   margin-right: 10px;
   min-height: 300px;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .files-viewer__content:last-child {
@@ -25,6 +24,16 @@
   border-radius: 5px;
   border: 3px solid var(--blue-light-color);
   font-family: "Nunito", sans-serif;
+  background-color: var(--white-color);
+}
+
+.files-viewer__text-input__options {
+  display: flex;
+}
+
+.files-select {
+  flex: 1;
+  margin-right: 10px;
 }
 
 .files-viewer__preview--wrapper {
