--- a/src/modules/FilesViewer/components/TextBox.styles.css
+++ b/src/modules/FilesViewer/components/TextBox.styles.css
@@ -1,12 +1,13 @@
 .text-box--wrapper {
   position: relative;
+  height: calc(100% - 51px);
 }
 
 .text-box__input {
   padding: 10px;
   resize: none;
   width: 100%;
-  height: calc(100% - 51px);
+  height: 100%;
   box-sizing: border-box;
   border-radius: 5px;
   border: 3px solid var(--blue-light-color);
