--- a/src/shared-components/Loader/Loader.styles.css
+++ b/src/shared-components/Loader/Loader.styles.css
@@ -1,3 +1,11 @@
 .loader--wrapper {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader--wrapper svg {
+  width: 150px;
+  height: 150px;
 }
