--- a/src/shared-components/Loader/Loader.styles.css
+++ b/src/shared-components/Loader/Loader.styles.css
@@ -3,9 +3,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: var(--black-color);
 }
 
 .loader--wrapper svg {
   width: 150px;
   height: 150px;
+  animation: loading 1.5s infinite alternate;
+}
+
+@keyframes loading {
+  from {
+    transform: rotateZ(0);
+  }
+  from {
+    transform: rotateZ(-360deg);
+  }
 }
