--- a/src/shared-components/Loader/Loader.styles.css
+++ b/src/shared-components/Loader/Loader.styles.css
@@ -6,10 +6,18 @@
   color: var(--black-color);
 }
 
+.loader__text {
+  margin-top: 10px;
+  text-align: center;
+  font-weight: 600;
+}
+
 .loader--wrapper svg {
   width: 150px;
   height: 150px;
   animation: loading 1.5s infinite alternate;
+  margin: 0 auto;
+  display: block;
 }
 
 @keyframes loading {
