--- a/src/modules/FilesViewer/components/ImageEmpty/ImageEmpty.styles.css
+++ b/src/modules/FilesViewer/components/ImageEmpty/ImageEmpty.styles.css
@@ -2,9 +2,9 @@
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 30px;
   box-sizing: border-box;
   background-color: var(--white-color);
+  margin: 30px 0;
 }
 
 .image-empty--wrapper svg {
@@ -14,16 +14,16 @@
   margin: 0 auto;
 }
 
-.image-empty--wrapper p {
-  text-align: center;
-  font-weight: 600;
-  color: var(--black-color);
-  margin-top: 5px;
-}
-
 .image-empty--wrapper h2 {
   text-align: center;
   color: var(--black-color);
   font-weight: 800;
   margin: 30px 0 0 0;
+}
+
+.image-empty--wrapper p {
+  text-align: center;
+  font-weight: 600;
+  color: var(--black-color);
+  margin-top: 5px;
 }
