--- a/src/modules/FilesViewer/components/ImageEmpty/ImageEmpty.styles.css
+++ b/src/modules/FilesViewer/components/ImageEmpty/ImageEmpty.styles.css
@@ -9,7 +9,7 @@
 
 .image-empty--wrapper svg {
   display: block;
-  width: 250px;
+  width: 45%;
   height: auto;
   margin: 0 auto;
 }
@@ -18,7 +18,7 @@
   text-align: center;
   color: var(--black-color);
   font-weight: 800;
-  margin: 30px 0 0 0;
+  margin: 20px 0 0 0;
 }
 
 .image-empty--wrapper p {
