style(Progressbar.styles.css):Increase size of progress filter

--- a/src/shared-components/Progressbar/Progressbar.styles.css
+++ b/src/shared-components/Progressbar/Progressbar.styles.css
@@ -37,11 +37,11 @@
   position: absolute;
   bottom: 9px;
   background: var(--pink-color);
-  height: 16px;
+  height: 24px;
   left: 0;
   right: 0;
-  bottom: 0;
-  border-radius: 9px;
+  bottom: -4px;
+  border-radius: 14px;
   z-index: 1;
   transition: right .2s ease-in-out;
 }
