feat(src):Change background

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --yellow-color: #f4e095;
   --black-color: #444;
   --white-color: #fff;
-  --green-color: #a5d6ce;
+  --green-color: #271638;
 }
 
 body {
