--- a/src/views/Home/Home.styles.css
+++ b/src/views/Home/Home.styles.css
@@ -1,3 +1,8 @@
+.home--wrapper {
+  background-image: url("https://img9.uhdpixel.com/wp/a/48/minimalist-landscape-mountains-city-b416.jpg");
+  background-size: cover;
+}
+
 .home {
   background-color: var(--dark-blue-color);
   padding: 0 30px 50px;
