--- a/src/shared-components/Cloud/Cloud.styles.css
+++ b/src/shared-components/Cloud/Cloud.styles.css
@@ -29,3 +29,9 @@
 .cloud.short-top::before {
   width: 20vw;
 }
+
+@media only screen and (max-width: 1000px) {
+  .cloud--wrapper {
+    display: none;
+  }
+}
