[JPT-22] Change style colors (#18)
* feat(src):Change background

* feat(src):Hide clouds on small devices

* feat(src):Rename green color

--- a/src/views/Home/Home.styles.css
+++ b/src/views/Home/Home.styles.css
@@ -1,3 +1,10 @@
+.home--wrapper {
+  background-image: url("https://img9.uhdpixel.com/wp/a/48/minimalist-landscape-mountains-city-b416.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .home {
   background-color: var(--dark-blue-color);
   padding: 0 30px 50px;
